@@ -556,7 +556,7 @@ extern ZORBA_DLL_PUBLIC ZorbaErrorCode ZDDY0010_COLLECTION_CONST_NODE_UPDATE;
 
 extern ZORBA_DLL_PUBLIC ZorbaErrorCode ZDDY0011_COLLECTION_NODE_NOT_FOUND;
 
-extern ZORBA_DLL_PUBLIC ZorbaErrorCode ZDDY0012_COLLECTION_UNORDERED_BAD_INSERT;
+extern ZORBA_DLL_PUBLIC ZorbaErrorCode ZDDY0012_COLLECTION_UNORDERED_BAD_OPERATION;
 
 extern ZORBA_DLL_PUBLIC ZorbaErrorCode ZDDY0013_COLLECTION_BAD_DESTROY_INDEXES;
 
