@@ -813,7 +813,7 @@ ZorbaErrorCode ZDDY0010_COLLECTION_CONST_NODE_UPDATE( "ZDDY0010" );
 ZorbaErrorCode ZDDY0011_COLLECTION_NODE_NOT_FOUND( "ZDDY0011" );
 
 
-ZorbaErrorCode ZDDY0012_COLLECTION_UNORDERED_BAD_INSERT( "ZDDY0012" );
+ZorbaErrorCode ZDDY0012_COLLECTION_UNORDERED_BAD_OPERATION( "ZDDY0012" );
 
 
 ZorbaErrorCode ZDDY0013_COLLECTION_BAD_DESTROY_INDEXES( "ZDDY0013" );
