@@ -272,7 +272,7 @@ extern entry const dict_en[] = {
   { "ZDDY0009", "\"$1\": not all nodes to delete are at the beginning of this queue collection" },
   { "ZDDY0010", "\"$1\": illegal update of read-only nodes" },
   { "ZDDY0011", "\"$1\": collection does not contain node" },
-  { "ZDDY0012", "\"$1\": illegal insert into unordered collection" },
+  { "ZDDY0012", "\"$1\": illegal $2 into unordered collection" },
   { "ZDDY0013", "\"$1\": can not delete collection because indexes reference it" },
   { "ZDDY0014", "\"$1\": can not delete collection because integrity constraints reference it" },
   { "ZDDY0015", "\"$1\": can not delete collection because there are references to its nodes" },
