@@ -716,8 +716,8 @@ ZorbaInsertNodesFirstIterator::getCollection(
     if (collectionDecl->getOrderProperty() == StaticContextConsts::decl_unordered)
     {
       throw XQUERY_EXCEPTION(
-        zerr::ZDDY0012_COLLECTION_UNORDERED_BAD_INSERT,
-        ERROR_PARAMS( aName->getStringValue() ),
+        zerr::ZDDY0012_COLLECTION_UNORDERED_BAD_OPERATION,
+        ERROR_PARAMS( aName->getStringValue(), "insert" ),
         ERROR_LOC( loc )
       );
     }
@@ -803,8 +803,8 @@ ZorbaInsertNodesLastIterator::getCollection(
     if (collectionDecl->getOrderProperty() == StaticContextConsts::decl_unordered)
     {
       throw XQUERY_EXCEPTION(
-        zerr::ZDDY0012_COLLECTION_UNORDERED_BAD_INSERT,
-        ERROR_PARAMS( aName->getStringValue() ),
+        zerr::ZDDY0012_COLLECTION_UNORDERED_BAD_OPERATION,
+        ERROR_PARAMS( aName->getStringValue(), "insert" ),
         ERROR_LOC( loc )
       );
     }
@@ -900,8 +900,8 @@ ZorbaInsertNodesBeforeIterator::getCollection(
     if (collectionDecl->getOrderProperty() == StaticContextConsts::decl_unordered)
     {
       throw XQUERY_EXCEPTION(
-        zerr::ZDDY0012_COLLECTION_UNORDERED_BAD_INSERT,
-        ERROR_PARAMS( aName->getStringValue() ),
+        zerr::ZDDY0012_COLLECTION_UNORDERED_BAD_OPERATION,
+        ERROR_PARAMS( aName->getStringValue(), "insert" ),
         ERROR_LOC( loc )
       );
     }
@@ -1574,6 +1574,15 @@ ZorbaDeleteNodesFirstIterator::getCollection(
       ERROR_LOC( aLoc )
     );
   }
+  if (collectionDecl && 
+      collectionDecl->getOrderProperty() == StaticContextConsts::decl_unordered)
+  {
+    throw XQUERY_EXCEPTION(
+      zerr::ZDDY0012_COLLECTION_UNORDERED_BAD_OPERATION,
+      ERROR_PARAMS( aName->getStringValue(), "delete" ),
+      ERROR_LOC(loc)
+    );
+  }
 
   return collectionDecl;
 }
@@ -1720,6 +1729,15 @@ ZorbaDeleteNodesLastIterator::getCollection(
       zerr::ZDDY0003_COLLECTION_DOES_NOT_EXIST,
       ERROR_PARAMS( aName->getStringValue() ),
       ERROR_LOC( aLoc )
+    );
+  }
+  if (collectionDecl &&
+      collectionDecl->getOrderProperty() == StaticContextConsts::decl_unordered)
+  {
+    throw XQUERY_EXCEPTION(
+      zerr::ZDDY0012_COLLECTION_UNORDERED_BAD_OPERATION,
+      ERROR_PARAMS( aName->getStringValue(), "delete" ),
+      ERROR_LOC(loc)
     );
   }
   return collectionDecl;
