@@ -1,2 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<wb>2</wb><wb>3</wb><wb>4</wb><wb>5</wb><wb>6</wb><wb>7</wb><wb>8</wb><wb>9</wb><wb>10</wb>
