@@ -38,6 +38,7 @@ version 2.x
   * Fixed bug #855314 (should not fold a constant expr that returns an error item)
   * Added ExternalFunctionParameter class to be registered in the DynamicContext
   * Fixed bug #863320 (Sentence is incorrectly incremented when token characters end without sentence terminator)
+  * Fixed bug #863730 (static delete-node* functions don't raise ZDDY0012)
 
 version 2.0.1
 
